src/main/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-raghu
  labels:
    app: docker-raghu
spec:
  selector:
    matchLabels:
      app: docker-raghu
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-raghu
    spec:
      containers:
      - name: docker-raghu
        image: docker-raghu
        imagePullPolicy: Never
        ports:
        - containerPort: 9090
