src/main/resources/service.yml
apiVersion: v1
kind: Service 
metadata:
  name: docker-raghu
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: docker-raghu
