src/main/resources/sampleingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: minikubeip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-raghu
                port:
                  number: 9090
